[gd_scene load_steps=2 format=3 uid="uid://bvxn8y7kl2m3r"]

[ext_resource type="Script" path="res://ui/hub/hotkey_config_window.gd" id="1"]

[node name="HotkeyConfigWindow" type="Window"]
title = "Configuraci√≥n de Teclas"
position = Vector2i(100, 100)
size = Vector2i(600, 500)
min_size = Vector2i(500, 400)
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 36.0
offset_right = -8.0
offset_bottom = -40.0

[node name="HBoxPresets" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelPresets" type="Label" parent="VBoxContainer/HBoxPresets"]
layout_mode = 2
text = "Presets:"
size_flags_horizontal = 0

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxPresets"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
popup/item_0/text = "Ninguno"
popup/item_0/id = 0
popup/item_1/text = "WASD (Actual)"
popup/item_1/id = 1
popup/item_2/text = "Flechas"
popup/item_2/id = 2

[node name="ResetAllButton" type="Button" parent="VBoxContainer/HBoxPresets"]
layout_mode = 2
text = "Restablecer Todo"
size_flags_horizontal = 0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Cerrar"
